--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<label for="desc-1">Description</label>
 					<input class="desc-btn" type="radio" id="desc-2" name="desc-btn" />
 					<label for="desc-2">Details</label>
-					<div class="section-fluid desc-sec accor-1">
+				1	<div class="section-fluid desc-sec accor-1">
 						<p>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam tempora enim officia
 							veritatis hic.
